<resources>
    <string name="app_name">GetSetGo</string>

    <string name="facebook_app_id">149988207000623</string>
    <string name="fb_login_protocol_scheme">fb149988207000623</string>

    <string name="googleClientID">988982728689-nd6cg0af5o2c647tnk8rv3lsb2fgots5.apps.googleusercontent.com</string>
    <string name="googleClientSecret">MKpVGLhP5J0IX_x0EKZIr9wu</string>


    <string name="title_crash_course">Crash Course</string>
    <string name="title_all_transactions">All Transactions</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam.</string>

    <string name="read_more"><u>Read More</u></string>
    <string name="read_less"><u>Read Less</u></string>
    <string name="view_more">View more</string>
    <string name="view_less">View Less</string>
    <string name="show_more">Show More</string>
    <string name="show_less">Show Less</string>
    <string name="referral_income">Referral Income</string>
    <string name="transfer">Transfer</string>
    <string name="preview">Preview</string>
    <string name="learning_outcomes">Learning Outcomes</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="modules">Modules</string>
    <string name="downloadable_additional_files">Downloadable additional files</string>
    <string name="additionalLink">Additional linkes</string>
    <string name="comments">Comments</string>
    <string name="submit">Submit</string>
    <string name="completed">Completed</string>


    <string-array name="listArray">
        <item>Python</item>
        <item>Java</item>
        <item>Excel</item>
        <item>javascript</item>
        <item>React</item>
    </string-array>
    <string-array name="categoryArray">
        <item>Effective Counseling Secrets</item>
        <item>Pure Career Planning</item>
        <item>Smart School</item>
        <item>Career Planning Blueprint</item>
        <item>Effective Counseling Secrets</item>
        <item>Pure Career Planning</item>
        <item>Creativity &amp; Innovation</item>
        <item>Career Planning Blueprint</item>
        <item>Effective Counseling Secrets</item>
        <item>Pure Career Planning</item>
    </string-array>

</resources>