<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/toolbar_backgound">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/main_layout_bg">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nestedScroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:layout_marginTop="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtCourseName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorTextDark"
                        android:textSize="@dimen/font_size_x20"
                        android:ellipsize="marquee"
                        android:textStyle="bold"
                        android:fontFamily="@font/nunit_sans_bold"
                        android:gravity="center"
                        android:paddingLeft="@dimen/x16"
                        android:paddingRight="@dimen/x16"
                        android:paddingTop="@dimen/x16">

                    </TextView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/x200"
                        app:cardCornerRadius="@dimen/x10"
                        android:layout_marginTop="@dimen/x16"
                        android:layout_marginLeft="@dimen/x16"
                        android:layout_marginRight="16dp"
                        app:cardElevation="0dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/black">

                            <com.google.android.exoplayer2.ui.PlayerView
                                android:id="@+id/playerView"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                app:animation_enabled="true"
                                app:controller_layout_id="@layout/exo_playback_control_view"
                                app:show_buffering="when_playing" />

                            <ProgressBar
                                android:id="@+id/pbVideoPlayer"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:visibility="invisible"
                                android:indeterminateDrawable="@drawable/progress"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/txtVideoTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_sans_semibold"
                        android:layout_marginRight="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="10dp"
                        android:text=""
                        android:textColor="@color/colorTextDark"
                        android:textSize="18sp" />


                    <LinearLayout
                        android:id="@+id/lnrButtonView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/x24"
                        android:visibility="gone"
                        android:gravity="center">

                        <Button
                            android:id="@+id/btnPrevious"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/x16"
                            android:layout_weight="1"
                            android:background="@drawable/bg_previous"
                            android:fontFamily="@font/nunit_sans_bold"
                            android:text="@string/previous"
                            android:textAllCaps="false"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/font_size_x14" />

                        <Button
                            android:id="@+id/btnNext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/x16"
                            android:layout_weight="1"
                            android:background="@drawable/bg_next"
                            android:fontFamily="@font/nunit_sans_bold"
                            android:text="@string/next"
                            android:textAllCaps="false"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/font_size_x14" />

                    </LinearLayout>


                    <TextView
                        android:id="@+id/txtModule"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/x24"
                        android:fontFamily="@font/nunito_sans_semibold"
                        android:text="@string/modules"
                        android:layout_marginRight="@dimen/x16"
                        android:layout_marginLeft="@dimen/x16"
                        android:textColor="@color/colorTextDark"
                        android:textSize="@dimen/font_size_x16"
                        android:visibility="gone"
                        />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerModule"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/x5">

                    </androidx.recyclerview.widget.RecyclerView>

                    <TextView
                        android:id="@+id/txtAdditionalFiles"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/x24"
                        android:fontFamily="@font/nunito_sans_semibold"
                        android:text="@string/downloadable_additional_files"
                        android:layout_marginRight="@dimen/x16"
                        android:visibility="gone"
                        android:layout_marginLeft="@dimen/x16"
                        android:textColor="@color/colorTextDark"
                        android:textSize="@dimen/font_size_x16"
                        />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerDocument"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/x5">

                    </androidx.recyclerview.widget.RecyclerView>

                    <TextView
                        android:id="@+id/txtAdditionalLinked"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/x24"
                        android:fontFamily="@font/nunito_sans_semibold"
                        android:text="@string/additionalLink"
                        android:layout_marginRight="@dimen/x16"
                        android:layout_marginLeft="@dimen/x16"
                        android:visibility="gone"
                        android:textColor="@color/colorTextDark"
                        android:textSize="@dimen/font_size_x16"
                        />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerLink"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/x24"
                        android:layout_marginTop="@dimen/x5">

                    </androidx.recyclerview.widget.RecyclerView>



                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </RelativeLayout>

    </RelativeLayout>

</layout>